...
                is ApiException -> when (throwable.code) {
                    404 -> PortForwardSessionException(
                        "Pod '$podName' was not found in namespace '$namespace'",
                        throwable,
                    )
                    403 -> PortForwardSessionException(
                        "Forbidden: no permission to port-forward pod '$podName' in namespace '$namespace'",
                        throwable,
                    )
                    else -> PortForwardSessionException(
                        "Port-forward API returned HTTP ${throwable.code}",
                        throwable,
                    )
...
